# newsletter_tools

./: .gitignore  .pre-commit-config.yaml  README.md  clearance.py  main.py  my_functions.py  pyproject.toml  review_merged_site.py  script.py  tchap.py  test_all.py  treat_replies.py
docs/: graphs.sh
email/css/: style.css
fusion_site/: template.qmd
src/: generate_email.py  generate_tchap.py  main.py
src/directory/: extract.py  replies.py
src/email/: generate.py  knit.py  prep.py
src/github/: extract.py
src/merge/: merge.py  review_merged_site.py
src/tchap/: message.py
src/test/: test_all.py
src/utils/: files.py  grist_api.py
test/: replies.txt
